# object_detection

install/: local_setup.sh  setup.sh
install/camera_opencv/lib/camera_opencv/: camera
install/camera_opencv/share/camera_opencv/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera_opencv/share/camera_opencv/cmake/: camera_opencvConfig.cmake
install/camera_py/lib/camera_py/: camera
install/camera_py/share/camera_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/object_detection/lib/object_detection/: detector
install/object_detection/share/object_detection/: package.sh  package.xml
install/objects_py/lib/objects_py/: detector
install/objects_py/share/objects_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/camera_opencv/: CMakeLists.txt
src/camera_opencv/src/: camera.cpp
src/camera_py/: setup.py
src/camera_py/camera_py/: camera.py
src/object_detection/: setup.py
src/objects_py/: package.xml  setup.cfg  setup.py
src/objects_py/objects_py/: objects_node.py
